KD-139: Rotating collections - hotfix 3

--- a/koha-tmpl/intranet-tmpl/prog/en/modules/catalogue/detail.tt
+++ b/koha-tmpl/intranet-tmpl/prog/en/modules/catalogue/detail.tt
@@ -572,8 +572,8 @@ function verify_images() {
                     [% END %]
                     <td class="location">[% UNLESS ( singlebranchmode ) %][% item.branchname %] [% END %]</td>
                     <td class="homebranch">[% item.homebranch %]<span class="shelvingloc">[% item.location %]</span>
-                    [% IF item.inCollection %]
-                    <span class="shelvingloc">(Rotating collections)</span> </td>
+                    [% IF item.itemsCollection %]
+                        <span class="shelvingloc">(Col.: <a href="/cgi-bin/koha/rotating_collections/addItems.pl?colId=[% item.itemsCollection %]">[% item.itemsCollection%]</a>)</span> </td>
                     [% END %]
                     [% IF ( itemdata_ccode ) %]<td>[% item.ccode %]</td>[% END %]
                     <td class="itemcallnumber">[% IF ( item.itemcallnumber ) %] [% item.itemcallnumber %][% END %]</td>
