Bug 12617 - Koha should let admins to configure automatically generated password complexity/difficulty
Adds simple password policy(with regards to complexity) management into categories:
- Per category password policy: admins can configure what kind of passwords get generated
in member-passwords. User-created passwords are also checked against the policy if it is
defined and complexity is enforced for every user based on their set category.
- Reworks the old custom password generation code in member-password to use a pretty powerful perl
module from the CPAN: App::Genpass

- Predefined policies:
	- simplenumeric: the digits 0-9 allowed only
	- alphanumeric: passwords must contain only the digits 0-9 and lowercase and uppercase characters.
	Special characters are not allowed.
	- complex: patrons are required to use complex passwords containing numbers, uppercase and lowercase
	characters and special characters.

--- a/koha-tmpl/intranet-tmpl/prog/en/modules/admin/categorie.tt
+++ b/koha-tmpl/intranet-tmpl/prog/en/modules/admin/categorie.tt
@@ -25,6 +25,11 @@
     if ( $("#branches option:selected").length < 1 ) {
         $("#branches option:first").attr("selected", "selected");
     }
+
+    var selectedPassPolicy = "[% selectedpasswordpolicy %]";
+    if (selectedPassPolicy) {
+        $("#password-policy").val(selectedPassPolicy);
+    }
 });
 	function isNotNull(f,noalert) {
 		if (f.value.length ==0) {
@@ -189,6 +194,19 @@
         <span>Select All if this category type must to be displayed all the time. Otherwise select librairies you want to associate with this value.
         </span>
     </li>
+    <li>
+        <label for="password-policy">Category password policy</label>
+        <select name="password-policy" id="password-policy">
+            <option value=""></option>
+            <option value="complex">Complex</option>
+            <option value="alphanumeric">Alphanumeric</option>
+            <option value="simplenumeric">Numbers only</option>
+        </select>
+        <span>
+            Selecting a password policy for a category affects both automatically created suggested passwords and enfo$
+            of rules.
+        </span>
+    </li>
     <li><label for="block_expired">Block expired patrons</label>
         <select name="block_expired" id="block_expired">
             [% IF ( BlockExpiredPatronOpacActions == -1  ) %]
@@ -309,6 +327,7 @@ Confirm deletion of category [% categorycode |html %][% END %]</legend>
             <th scope="col">Messaging</th>
             [% END %]
             <th scope="col">Branches limitations</th>
+            <th scope="col">Password policy</th>
             <th scope="col">&nbsp; </th>
             <th scope="col">&nbsp; </th>
         </tr>
@@ -382,6 +401,7 @@ Confirm deletion of category [% categorycode |html %][% END %]</legend>
                                 No limitation
                             [% END %]
                         </td>
+                        <td>[% loo.passwordpolicy %]</td>
                         <td><a href="[% loo.script_name %]?op=add_form&amp;categorycode=[% loo.categorycode |uri %]">Edit</a></td>
                         <td><a href="[% loo.script_name %]?op=delete_confirm&amp;categorycode=[% loo.categorycode |uri %]">Delete</a></td>
 		</tr>
