--- a/koha-tmpl/intranet-tmpl/prog/en/modules/members/member-password.tt
+++ b/koha-tmpl/intranet-tmpl/prog/en/modules/members/member-password.tt
@@ -48,18 +48,21 @@
 		<div class="dialog alert">
 		<h4>The following errors have occurred:</h4>
 		<ul>
-		[% IF ( BADUSERID ) %]
+		[% IF ( errors.BADUSERID ) %]
         <li>You have entered a username that already exists. Please choose another one.</li>
 		[% END %]
-		[% IF ( SHORTPASSWORD ) %]
+		[% IF ( errors.SHORTPASSWORD ) %]
 		<li><strong>The password entered is too short</strong>. Password must be at least [% minPasswordLength %] characters.</li>
 		[% END %]
-		[% IF ( NOPERMISSION ) %]
+		[% IF ( errors.NOPERMISSION ) %]
 		<li>You do not have permission to edit this patron's login information.</li>
 		[% END %]
-		[% IF ( NOMATCH ) %]
+		[% IF ( errors.NOMATCH ) %]
 		<li><strong>The passwords entered do not match</strong>. Please re-enter the new password.</li>
 		[% END %]
+        [% IF ( errors.NOPOLICYMATCH ) %]
+        <li><strong>[% errors.NOPOLICYMATCH %]</strong>. Please re-enter the new password.</li>
+        [% END %]
 		</ul>
 		</div>
 	[% END %]
