--- a/koha-tmpl/intranet-tmpl/prog/en/modules/circ/pendingreserves.tt
+++ b/koha-tmpl/intranet-tmpl/prog/en/modules/circ/pendingreserves.tt
@@ -64,6 +64,38 @@ $(document).ready(function() {
           holdst.fnFilter( $(this).val(), 9 );
       } );
   } );
+
+  // Generate links for rotating collections
+  var rotColUrl = "/cgi-bin/koha/rotating_collections/addItems.pl?colId=";
+  var allNodes = holdst.fnGetNodes();
+  var columnNodes = [];
+
+  for (var i = 0; i < allNodes.length; i++) {
+    columnNodes.push($(allNodes[i]).find("td:eq(5)"));
+  }
+
+  columnNodes.map(function (node) {
+    var tdRowspan = $(node).attr('rowspan');
+    var newContent = $(node).clone().empty();
+      if (!tdRowspan) {
+        var html = node.html();
+        var cellCallNums = html.split('<br>');
+        cellCallNums.forEach(function(row) {
+          var splitRow = row.split('Col');
+          var callNum = splitRow[0];
+          if (splitRow.length > 1) {
+            var colId = splitRow[1].trim();
+            $(newContent).append(callNum);
+            $(newContent).append($('<a href="' + rotColUrl + colId + '">Col. ' + colId + '</a><br>'));
+          }
+          else {
+            $(newContent).append(callNum + "<br>");
+          }
+        });
+        $(node).replaceWith(newContent);
+      }
+  });
+
 });
 //]]>
 </script>
@@ -126,9 +158,9 @@ $(document).ready(function() {
             <td>"</td>
         [% END %]
         <td>[% reserveloo.holdingbranch %]</td>
-        <td><p>[% reserveloo.itemcallnumber %]</p></td>
-        <td><p>[% reserveloo.copyno %]</p></td>
-        <td><p>[% reserveloo.enumchron %]</p></td>
+        <td>[% reserveloo.itemcallnumber %]</td>
+        <td>[% reserveloo.copyno %]</td>
+        <td>[% reserveloo.enumchron %]</td>
         <td>[% reserveloo.itype %]</td>
         <td>[% reserveloo.location %]</td>
         <td>
