--- a/koha-tmpl/opac-tmpl/bootstrap/en/modules/opac-memberentry.tt
+++ b/koha-tmpl/opac-tmpl/bootstrap/en/modules/opac-memberentry.tt
@@ -50,6 +50,24 @@
                     <div class="alert">You have not filled out all required fields. Please fill in all missing fields and resubmit.</div>
                 [% END %]
 
+                [%  IF invalid_form_fields %]
+                    <div class="alert"><strong>The following fields are invalid:</strong>
+                        <ul>
+                            [% FOREACH field IN invalid_form_fields %]
+                                [% IF field == "phone" %]<li>Primary contact information: primary phone</li>[% END %]
+                                [% IF field == "phonepro" %]<li>Primary contact information: secondary phone number</li>[% END %]
+                                [% IF field == "mobile" %]<li>Primary contact information: mobile phone number</li>[% END %]
+                                [% IF field == "email" %]<li>Primary contact information: primary email address</li>[% END %]
+                                [% IF field == "emailpro" %]<li>Primary contact information: secondary email address</li>[% END %]
+                                [% IF field == "fax" %]<li>Primary contact information: fax number</li>[% END %]
+                                [% IF field == "B_phone" %]<li>Alternative contact information: phone number</li>[% END %]
+                                [% IF field == "B_email" %]<li>Alternative contact information: email address</li>[% END %]
+                            [% END %]
+                        </ul>
+                        Please correct them.
+                    </div>
+                [% END %]
+
                 [% IF failed_captcha %]
                     <div class="alert">You typed in the wrong characters in the box before submitting. Please try again.</div>
                 [% END %]
@@ -765,6 +783,7 @@
 [% INCLUDE 'opac-bottom.inc' %]
 [% BLOCK jsinclude %]
     <script type="text/javascript">
+        var MSG_INCORRECT_PHONE = _("Please enter a valid phone number.");
         //<![CDATA[
         $(document).ready(function() {
             [% IF action == 'edit' && !OPACPatronDetails %]
@@ -777,6 +796,76 @@
             [% ELSE %]
                 $( "#borrower_dateofbirth" ).datepicker({ yearRange: "c-120:c" });
             [% END %]
+
+            // KD-173: form validation for critical fields
+            $.validator.addMethod('phone', function(value) {
+                if (!value.trim()) {
+                    return 1;
+                }
+                else {
+                    // http://regexlib.com/REDetails.aspx?regexp_id=3009
+                    return (value.match(/^((\+)?[1-9]{1,2})?([-\s\.])?((\(\d{1,4}\))|\d{1,4})(([-\s\.])?[0-9]{1,12}){1,2}$/));
+                }
+            },
+            MSG_INCORRECT_PHONE);
+
+            $("#memberentry-form").validate({
+                rules: {
+                    borrower_phone: {
+                        phone: true,
+                        minlength: 5,
+                        maxlength: 20
+                    },
+                    borrower_phonepro: {
+                        phone: true,
+                        minlength: 5,
+                        maxlength: 20,
+                    },
+                    borrower_mobile: {
+                        phone: true,
+                        minlength: 5,
+                        maxlength: 20
+                    },
+                    borrower_email: {
+                        email: true
+                    },
+                    borrower_emailpro: {
+                        email: true
+                    },
+                    borrower_fax: {
+                        phone: true,
+                        minlength: 5,
+                        maxlength: 20
+                    },
+                    borrower_B_phone: {
+                        phone: true,
+                        minlength: 5,
+                        maxlength: 20
+                    },
+                    borrower_B_email: {
+                        email: true
+                    }
+                },
+                submitHandler: function(form) {
+                    $("body, form input[type='submit'], form button[type='submit'], form a").addClass('waiting');
+                    if (form.beenSubmitted) {
+                        return false;
+                    }
+                    else {
+                        form.beenSubmitted = true;
+                        form.submit();
+                    }
+                },
+                errorPlacement: function(error, element) {
+                    offset = element.offset();
+                    error.insertAfter(element)
+                    error.addClass('error');  // add a class to the wrapper
+                    error.css('position', 'absolute');
+                    error.css('left', offset.left + element.outerWidth() + 10);
+                    error.css('top', offset.top);
+                    error.css('width', 'auto');
+                }
+            });
         });
     //]]>
     </script>
