Bug 12353 - Displaying the last pickup date in OPAC and staff client and waitingholds.pl
TEST PLAN:

1. Create a reservation for a Borrower with pickup branch
2. Check-in the corresponding Item in the pickup branch and confirm the hold
   for the Borrower
3. Go to circ/circulation.pl for the Borrower and verify that the reservation
   is "Waiting for pickup"
4. In the
       Home › Circulation › Checkouts -tab (circ/circulation.pl)
   and in the
       Home › Patrons › Patron details -tab
   and in the
       OPAC your summary
   and in the
       circ/waitingreserves.pl
   When looking at reserves, you will find a last pickup date -column added
   which has a value if the reservation is waiting for pickup.

--- a/koha-tmpl/intranet-tmpl/prog/en/modules/circ/circulation.tt
+++ b/koha-tmpl/intranet-tmpl/prog/en/modules/circ/circulation.tt
@@ -770,6 +770,7 @@ No patron matched <span class="ex">[% message %]</span>
             <thead>
                 <tr>
                     <th>Hold date</th>
+                    <th>Last pickup date</th>
                     <th>Title</th>
                     <th>Call number</th>
                     <th>Barcode</th>
