--- a/koha-tmpl/intranet-tmpl/prog/en/modules/circ/waitingreserves.tt
+++ b/koha-tmpl/intranet-tmpl/prog/en/modules/circ/waitingreserves.tt
@@ -78,6 +78,7 @@
                <table id="holdst">
                <thead><tr>
                     <th class="title-string">Available since</th>
+                    <th>Last pickup date</th>
                     <th class="anti-the">Title</th>
                     <th>Patron</th>
                     <th>Location</th>
@@ -88,6 +89,7 @@
                <tbody>[% FOREACH reserveloo IN reserveloop %]
                 <tr>
                     <td><span title="[% reserveloo.waitingdate %]">[% reserveloo.waitingdate | $KohaDates %]</span></td>
+                    <td>[% reserveloo.lastpickupdate %]</td>
                     <td>[% INCLUDE 'biblio-default-view.inc' biblionumber = reserveloo.biblionumber %]
                         [% reserveloo.title |html %] [% reserveloo.subtitle |html %]
                         </a>
@@ -138,6 +140,7 @@
                <table id="holdso">
                <thead><tr>
                     <th class="title-string">Available since</th>
+                    <th>Last pickup date</th>
                     <th class="anti-the">Title</th>
                     <th>Patron</th>
                     <th>Location</th>
@@ -148,6 +151,7 @@
                <tbody>[% FOREACH overloo IN overloop %]
                     <tr>
                         <td><p><span title="[% overloo.waitingdate %]">[% overloo.waitingdate | $KohaDates %]</span></p></td>
+                        <td>[% overloo.lastpickupdate %]</td>
                         <td>[% INCLUDE 'biblio-default-view.inc' biblionumber = overloo.biblionumber %][% overloo.title |html %] [% overloo.subtitle |html %]
                         </a>
                             [% UNLESS ( item_level_itypes ) %][% IF ( overloo.itemtype ) %]&nbsp; (<b>[% overloo.itemtype %]</b>)[% END %][% END %]
