--- a/koha-tmpl/intranet-tmpl/prog/en/modules/members/moremember.tt
+++ b/koha-tmpl/intranet-tmpl/prog/en/modules/members/moremember.tt
@@ -507,6 +507,7 @@ function validate1(date) {
             <thead>
                 <tr>
                     <th>Hold date</th>
+                    <th>Last pickup date</th>
                     <th>Title</th>
                     <th>Call number</th>
                     <th>Barcode</th>
