KD-139: added support for dates in addItem-view
- New column in addItems-view: "Date added" - the time when an item is added
to a collection is now kept and displayed.
- 2 new database columns a datetime for the displayed time and a separate
timestamp-column for the transaction as in other tables.

--- a/koha-tmpl/intranet-tmpl/prog/en/modules/rotating_collections/addItems.tt
+++ b/koha-tmpl/intranet-tmpl/prog/en/modules/rotating_collections/addItems.tt
@@ -250,6 +250,7 @@
                 <th>Title</th>
                 <th>Call number</th>
                 <th>Barcode</th>
+                <th>Date added</th>
                 <th>Origin library</th>
                 <th>Home library</th>
                 <th>Current location</th>
@@ -264,6 +265,7 @@
                 <td><a href="/cgi-bin/koha/catalogue/detail.pl?biblionumber=[% collectionItemsLoo.biblionumber %]">[% collectionItemsLoo.title |html %]</a></td>
                 <td>[% collectionItemsLoo.itemcallnumber %]</td>
                 <td><a href="/cgi-bin/koha/catalogue/moredetail.pl?biblionumber=[% collectionItemsLoo.biblionumber %]#item[% collectionItemsLoo.itemnumber %]">[% collectionItemsLoo.barcode %]</a></td>
+                <td>[% collectionItemsLoo.date_added_format %]</td>
                 <td>[% collectionItemsLoo.origin_branchname %]</td>
                 <td>[% collectionItemsLoo.branchname %]</td>
                 <td>[% collectionItemsLoo.holdingbranchname %]</td>
