Bug 13182 - When placing an order from a staged file, check for duplicates, display availability information.
When making acquisitions from one staged file, by many branches as a joint effort, it is important to be able to
make orders from the same import_record and to know how many Items have already been ordered.
Whenever a staged_file is displayed in the addorderiso2709.pl, BatchFindDuplicates() is always called on
that staged file using the default Matcher with matcherid=1.

Also introduces misc/maintenance/matchAllStagedRecords.pl to recreate import_record matchings based on the given
matcher.

This places some extra requirements.
1. An status = 'imported' import_record needs to be shown in the stage_file so other branches can order from it as
   well. So we can't "hide" a import_record from the staged_file after an order is placed.
2. Having imported one import_record, that import_record must know it is matched to the just imported Biblio,
   so next acquirers know that it is already in our catalog.
3. We need to know which other branches have already ordered the item so we wont end up ordering too many copies
   of one Biblio to the consortium. Thus we color each row and show the count of Items in the current user's
   branch and the total amount of Items in the whole consortium. Additional tooltip listing of Item counts by
   Branch is displayed so we know are there any such Items near us.

TEST PLAN:

SETUP:

0a. Define a Matcher from admin/matching-rules.pl. We think good starting values are:
Search index,         Tag , score
ISBN,                 020a, 1000
Identifier-standard,  024a, 1000
Identifier-standard,  028a, 1000
Title,                245a, 500
Title-uniform,        240a, 500
Corporate-name,       110a, 300
Personal-name,        100a, 300
Matching threshold 800
    You can use an existing matcher as well if you have it configured to other than ISBN.
    ALWAYS USE THE 1st MATCHER with id=1, because that is hard coded to do all the matching.

0b. 

--- a/koha-tmpl/intranet-tmpl/prog/en/css/staff-global.css
+++ b/koha-tmpl/intranet-tmpl/prog/en/css/staff-global.css
@@ -28,6 +28,10 @@ a:hover, a:active {
     border-radius: 5px;
 }
 
+.matched_orderline {
+       background-color: #F0E8F9;
+}
+
 .yui-button,.yui-button a:link,.yui-button a:visited {
 	color : #000;
 }
