KD-205 - Self-service holds pickup.
Repurposes the borrowers.othernames -column to work as the alias for picking waiting holds
from a self-service holds shelf.

-Renames "Other names:" from templates to "Holds identifier:".
-Makes the borrowers.othernames -column VARCHAR(50) and UNIQUE.
-When editing a borrower, javascript helpers autofill an empty othernames-field.
-When editing a borrower, the othernames-columns UNIQUE-field restriction is caught gracefully.
 This happens by a AJAX call when changing the #othernames-field and on server side when UPDATing.
-Hides the othernames from patron-title.inc, which is from most places displaying the Patron name

%%%%%%%%%%%%
-TEST PLAN:-
%%%%%%%%%%%%

INITIALIZATION:

0. Sysprefs BorrowerMandatoryField => othernames must be a mandatory field.
            BorrowerUnwantedField  => othernames must not be on this list.
            PatronSelfRegistrationBorrowerMandatoryField => othernames must be on this list.

BASIC TEMPLATES:

OPAC:
1. Go to opac-memberentry.pl and verify that the "Other names:" -label is renamed
   as "Holds identifier:"
SC:
2. Go to members/memberentry.pl and verify that the "Other names:" -label is renamed
   as "Holds identifier:".
2.1. Verify that the "Holds id:" is filled when it is focused on, if it was empty and
     surname and/or firstname are defined.

AJAX UNIQUENESS CHECK:

1. Find borrowers A and B.
2. Set the "Holds id:"-field for A as 1234.
                             for B as 12345.
3. Set the "Holds id:"-field (HI) for B as 1234.
4. Observe a notification that the "Holds id" is in use and needs to be changed.
5. Set the HI for B as 12345. 12345 is in use, but for this borrower so the warning disappears.
6. Do the same in OPAC/SC

UNIT tests!! => t/OPLIB/KD-205-SelfServiceHolds.t

--- a/koha-tmpl/intranet-tmpl/prog/en/modules/members/memberentrygen.tt
+++ b/koha-tmpl/intranet-tmpl/prog/en/modules/members/memberentrygen.tt
@@ -51,6 +51,35 @@
             }
         [% END %]
         $("#dateofbirth").datepicker({ maxDate: "-1D" });
+        var MSG_OTHERNAMES_NOT_UNIQUE = _("Not unique! Used by borrower");
+        function updateOthername() {
+            var othernames = $("#othernames");
+            var firstname = $("#firstname");
+            var surname = $("#surname");
+
+            if (othernames.val().length > 0) {
+                return;
+            }
+
+            $("#othernames").val(  surname.val() + ", " + firstname.val()  );
+        }
+        function checkUniqueOthernames () {
+            $.get("/cgi-bin/koha/svc/members/check_unique_othernames", { othernames: $("#othernames").val()[% IF borrowernumber %], borrowernumber: [% borrowernumber %] [% END %] }, function (sjson) {
+                var uniqueelement = $("#othernames_uniquecheck");
+                if (sjson.borrowernumber) {
+                    if (uniqueelement.length != 0) { //Prevents spamming this uniqueness warning
+                        uniqueelement.remove();
+                    }
+                    //We havent yet checked for uniqueness
+                    $("#othernames").after('<span id="othernames_uniquecheck" class="required">'+MSG_OTHERNAMES_NOT_UNIQUE+' <a href="/cgi-bin/koha/members/moremember.pl?borrowernumber='+sjson.borrowernumber+'">'+sjson.borrowernumber+'</a> - </span>');
+                }
+                else {
+                    uniqueelement.remove();
+                }
+            });
+        }
+        $("#othernames").focus(updateOthername);
+        $("#othernames").change(checkUniqueOthernames);
         $("#entryform").validate({
             rules: {
                 phone: {
@@ -265,6 +294,9 @@
 			[% IF ( ERROR_dateexpiry ) %]
 				<li id="ERROR_dateexpiry">Date of expiration is invalid.</li>
 			[% END %]
+            [% IF ( ERROR_othernames_not_unique ) %]
+				<li id="ERROR_othernames_not_unique">Holds identifier is not unique.</li>
+			[% END %]
 			[% IF ( ERROR_short_password ) %]
 				<li id="ERROR_short_password">Password must be at least [% minPasswordLength %] characters long.</li>
 			[% END %]
@@ -437,7 +469,7 @@
 			[% ELSE %]
 			<label for="othernames">
 			[% END %]
-            Other name: </label>
+            Holds identifier / Other name: </label>
             <input type="text" id="othernames" name="othernames" size="20"  value="[% othernames %]" class="[% focusAction %]" />
 [% IF ( mandatoryothernames ) %]<span class="required">Required</span>[% END %]
 		[% IF ( I ) %]<input type="hidden" name="sex" value="N" />[% END %]
