Bug 13182 - Overlay an existing Biblio with the acquired import_record
If we know we already have a matching biblio in Koha, we can optionally overlay the existing Biblio with the
new one. (We don't really need it but looks like Bg_12074 needs it).

TEST PLAN

1. Add Items to an order from a staged file.
2. Go and edit the newly added Biblio. Set the field 003 to "TEST ME GENTLY".
3. Add more Items for this same biblio from the same staged_file.
4. While selecting what to add, check the "Overlay?"-checkbox to replace the existing Bibliographic record
   with the import_record you are ordering.
5. Save the orderline selection.
6. Observe that the existing modified biblio has changed to it's latest revision.

--- a/koha-tmpl/intranet-tmpl/prog/en/modules/acqui/addorderiso2709.tt
+++ b/koha-tmpl/intranet-tmpl/prog/en/modules/acqui/addorderiso2709.tt
@@ -213,6 +213,7 @@
                                 [% END %]
                                 [% IF ( biblio.match_biblionumber ) %]
                                   Matches biblio [% biblio.match_biblionumber %] (score = [% biblio.match_score %]): <a href="/cgi-bin/koha/catalogue/detail.pl?biblionumber=[% biblio.match_biblionumber %]">[% biblio.match_citation %]</a>
+                                  Overlay? <input type="checkbox" name="overlay" id="overlay_record_[% biblio.import_record_id %]" value="[% biblio.import_record_id %]" />
                                 [% END %]
                               </span>
                             </li>
